--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -5,7 +5,7 @@
         <% if customer_signed_in?%>
         <%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete,  "data-confirm" => "本当に削除しますか？" ,class: 'btn btn-sm btn-danger' %>
         <% end %>
-      </div>
+      </div><br>
       <table class="table col-10 table-bordered">
          <tbody>
           <tr class="table-secondary">
