--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,1 +1,29 @@
-注文履歴詳細
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+  <h3>注文履歴詳細</h3>
+  </div>
+  <div class="row">
+    <div class="col-5">
+      <h5>注文情報</h5>  
+        <table class="table table-bordered">
+          <tr>
+            <th class="bg-secondary text-center">注文日</th>
+            <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+          </tr>
+          <tr>
+            <th class="bg-secondary text-center">配送先</th>
+            <td>
+                <%= @order.postal_code %> <br>
+                <%= @order.address %> <br>
+                <%= @order.name %>
+            </td>
+          </tr>
+          <tr>
+            <th class="bg-secondary text-center col-3">支払方法</th>
+            <td><%= @order.payment_way_i18n %></td>
+          </tr>
+        </table>
+    </div>
+  </div>
+</div>
