--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -17,7 +17,11 @@
     <% @orders.each do |order| %>
        <tr>
         <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
-        <td><%= order.postal_code + order.address %></td>
+        <td>
+            〒<%= order.postal_code %> <br>
+            <%= order.address %><br>
+            <%= order.name %>
+        </td>
         <td>
             <% order.order_details.each do |order_detail| %>
             <%= order_detail.item.name %>
