--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,1 +1,16 @@
-注文一覧
+<div class="container">
+  <h3 class="pt-3">注文履歴一覧</h3>
+  <div class="row">
+    <div class="col-5">
+      <table class="table table-bordered">
+        <tbody>
+          <tr>
+        　　<td>購入日時</td>
+        　　<td>購入者</td>
+        　　<td>注文個数</td>
+          </tr>
+        </tbody>
+        <%= @admin.orders.each do |admin| %>
+    </div>
+  </div>
+</div>
