--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -27,7 +27,13 @@
             <%= customer.email %>
           </td>
           <td>
-            <%= customer.is_deleted %>
+            <% if customer.is_deleted == false %>
+            <div class="text-success">
+            有効
+            </div>
+            <% else %>
+            退会
+            <% end %>
           </td>
         </tr> 
       <% end %>
