--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -59,7 +59,7 @@
         <table class="col-12">
           <tr>
             <th style="padding-right: 5em"></th>
-            <th><%= link_to "変更を保存", my_page_path, class: 'btn btn-sm btn-success' %></th>
+            <th><%= f.submit "変更を保存", my_page_path, class: 'btn btn-sm btn-success' %></th>
             <th><%= link_to "退会する", unsubscribe_path, class: "btn btn-sm btn-danger" %></th>
           </tr>
         </table>
