--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -45,16 +45,17 @@
         </tr>
         <tr>
           <th>会員ステータス</th>
-        　<th><%= f.radio_button :is_deleted, "false" %>
+        　<th><%= f.radio_button :is_deleted, false %>
           　   <%= f.label :is_deleted_false,"有効" %>
-          　　  <%= f.radio_button :is_deleted, "true" %>
+          　　  <%= f.radio_button :is_deleted, true %>
           　　  <%= f.label :is_deleted_true, "退会" %></th>
         </tr>
        </table>
        </div>
+         <%= f.submit %>
      <% end %>
      <div class="text-center">
-        <%= link_to "変更を保存", admin_customer_path, class: 'btn btn-sm btn-success' %>
+        <%#= link_to "変更を保存", admin_customer_path, class: 'btn btn-sm btn-success' %>
      </div>
   　</div>
   </div>
