--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -10,7 +10,13 @@
         　　<td>注文個数</td>
           </tr>
         </tbody>
-        <%#= @admin.order.each do |admin| %>
-        <%# end %>
+        <% @orders.each do |order| %>
+          <tr>
+            <td><%= link_to order.created_at.strftime('%Y/%m/%d %H:%M:%S'), admin_order_path(order.id) %></td>
+            <td><%= order.name %></td>
+            <td><%= order.order_details %></td>
+          </tr>
+        <% end %>
+        </table>
   </div>
 </div>
