--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -18,7 +18,7 @@
          <tr>
            <th>税込価格<br>
               (税抜価格)</th>
-           <td><%= (@item.price * 1.1).floor %>(<%= @item.price %>)</td>
+           <td><%= @item.with_tax_price %>(<%= @item.price %>)</td>
          </tr>
          <tr>
           <th colspan="3"></th>
