--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -4,7 +4,7 @@
    <h2><%= @customer.full_name %>さんの会員情報編集</h2>
    </div>
     <div class="col-md-8 col-md-offset-2">
-    <%= form_with model: @customer, url: admin_customer_path do |f| %> 
+    <%= form_with model: @customer, do |f| %> 
      <div class="form-group">
        <label for="customer_id"></label>
        <table>
@@ -55,7 +55,7 @@
          <%= f.submit %>
      <% end %>
      <div class="text-center">
-        <%#= link_to "変更を保存", admin_customer_path, class: 'btn btn-sm btn-success' %>
+        <%= f.submit "変更を保存", class: 'btn btn-sm btn-success' %>
      </div>
   　</div>
   </div>
