--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -6,7 +6,7 @@
         <h3>会員情報編集</h3>
         </div>
         <div class="col-md-10 col-md-offset-2">
-        <%= form_with model: @customer, url: my_page_path do |f| %> 
+        <%= form_with model: @customer, url: costomers_update_path do |f| %> 
         <div class="form-group">
         <label for="customer_id"></label>
         <table class="col-12">
@@ -60,7 +60,7 @@
           <tr>
             <th style="padding-right: 5em"></th>
             <th><%= f.submit "変更を保存", class: 'btn btn-sm btn-success' %></th>
-            <th><%= link_to "退会する", class: 'btn btn-sm btn-primary' %></th>
+            <th><%= link_to "退会する", withdrawal_path, method: :patch, class: 'btn btn-sm btn-primary' %></th>
           </tr>
         </table>
         <% end %>
