--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -11,10 +11,16 @@
           </tr>
         </tbody>
         <% @orders.each do |order| %>
+        <% sum=0 %>
           <tr>
             <td><%= link_to order.created_at.strftime('%Y/%m/%d %H:%M:%S'), admin_order_path(order.id) %></td>
             <td><%= order.name %></td>
-            <td><%= order.order_details %></td>
+            <td>
+              <% order.order_details.each do |order_detail| %>
+              <% sum += order_detail.amount %>
+              <% end %>
+              <%= sum %>
+            </td>
           </tr>
         <% end %>
         </table>
