--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container px-5 px-sm-0">
   <h2>商品一覧</h2>
   <div class="text-right">
-  <button type="button" class="btn btn-secondary" onclick="location.href='/admin/items/new'">+</button>
+  <button type="button" class="btn btn-secondary rounded-circle p-0" style="width:2rem;height:2rem;" onclick="location.href='/admin/items/new'">+</button>
    </div>
     <table class="table table-hover table-inveres">
         <thead>
