--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -19,8 +19,7 @@
           </td>
           <td>
             <%= link_to admin_customer_path(customer.id) do %>
-            <%= customer.last_name %>
-            <%= customer.first_name %>
+            <%= customer.full_name %>
             <% end %>
           </td>
           <td>
