--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,1 +1,48 @@
-注文履歴しょうさい
+<p id="notice"></p>
+<div class="container">
+    <div class="col-5">
+    <h3 class=text-center>注文履歴詳細</h3>
+    </div>
+     <div class="row">
+         <div class="col-10">
+          <table>
+            <tr>
+                <th>購入者</th>
+                <td><%= @order.name %></td>
+            </tr>
+            <tr>
+                <th>注文日</th>
+                <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+            </tr>
+            <tr>
+                <th>配送先</th>
+                <td>
+                  〒<%= @order.postal_code %>
+                  <%= @order.address %> <br>
+                  <%= @order.name %>
+                </td>
+            </tr>
+            <tr>
+                <th style="padding-right: 3em">支払方法</th>
+                <td><%= @order.payment_way_i18n %></td>
+            </tr>
+          </table><br>
+          <table class="col-6">
+                <tr class="bg-secondary">
+                    <th style="padding-right: 5em">商品名</th>
+                    <th>単価（税込）</th>
+                    <th>数量</th>
+                    <th>小計</th>
+                </tr>
+                    <% @order.order_details.each do |order_detail| %>
+                <tr>
+                    <td><%= order_detail.item.name %></td>
+                    <td><%= order_detail.price %></td>
+                    <td><%= order_detail.amount %></td>
+                    <td><%= order_detail.total_price %></td>
+                </tr>
+                    <% end %>
+          </table>
+     </div>
+ </div>
+ 
