--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,10 +1,8 @@
 <p id="notice"></p>
 <div class="container">
-    <div class="col-5">
     <h3 class=text-center>注文履歴詳細</h3>
-    </div>
-     <div class="row">
-         <div class="col-10">
+    <div class="row">
+        <div class="col-6">
           <table>
             <tr>
                 <th>購入者</th>
@@ -26,23 +24,48 @@
                 <th style="padding-right: 3em">支払方法</th>
                 <td><%= @order.payment_way_i18n %></td>
             </tr>
-          </table><br>
-          <table class="col-6">
-                <tr class="bg-secondary">
-                    <th style="padding-right: 5em">商品名</th>
-                    <th>単価（税込）</th>
-                    <th>数量</th>
-                    <th>小計</th>
-                </tr>
-                    <% @order.order_details.each do |order_detail| %>
-                <tr>
-                    <td><%= order_detail.item.name %></td>
-                    <td><%= order_detail.price %></td>
-                    <td><%= order_detail.amount %></td>
-                    <td><%= order_detail.total_price %></td>
-                </tr>
-                    <% end %>
           </table>
-     </div>
- </div>
- 
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-7">
+            <table>
+                    <tr class="bg-secondary">
+                        <th style="padding-right: 5em">商品名</th>
+                        <th>単価（税込）</th>
+                        <th>数量</th>
+                        <th>小計</th>
+                    </tr>
+                        <% @order.order_details.each do |order_detail| %>
+                    <tr>
+                        <td><%= order_detail.item.name %></td>
+                        <td><%= order_detail.price %></td>
+                        <td><%= order_detail.amount %></td>
+                        <td><%= order_detail.total_price %></td>
+                    </tr>
+                        <% end %>
+              </table>
+            </div>
+            <div class="col-4">
+                <table>
+                    <tr>
+                        <th>商品の合計</th>
+                        <td><%= @order.total_cash - @order.postage %>円</td>
+                    </tr>
+                    <tr>
+                        <th>送料</th>
+                        <td>
+                            <% @order.postage = 800 %>
+                            <%= @order.postage %>円
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>請求金額</th>
+                        <td>
+                            <%= @order.total_cash %>円
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
