--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -51,7 +51,7 @@
             </tr>
             <tr>
               <th class="bg-secondary text-center">商品合計</th>
-              <td class="text-"><%= total.to_i %></td>
+              <td class="text-fird"><%= total.to_i %></td>
             </tr>
             <tr>
               <th class="bg-secondary text-center">請求金額</th>
