--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,8 +1,7 @@
-<p id="notice"></p>
 <div class="container">
-    <h3 class=text-center>注文履歴詳細</h3>
+    <h3 class="pt-3">注文履歴詳細</h3>
     <div class="row">
-        <div class="col-6">
+        <div class="col-12">
           <table>
             <tr>
                 <th>購入者</th>
@@ -27,45 +26,47 @@
           </table>
         </div>
     </div>
+    <div><br></div>
     <div class="row">
-        <div class="col-7">
+        <div class="col-8">
+            <table class="table table-bordered">
+                <tr class="bg-secondary">
+                    <th style="padding-right: 5em">商品名</th>
+                    <th>単価（税込）</th>
+                    <th>数量</th>
+                    <th>小計</th>
+                </tr>
+                    <% @order.order_details.each do |order_detail| %>
+                <tr>
+                    <td><%= order_detail.item.name %></td>
+                    <td><%= order_detail.price %></td>
+                    <td><%= order_detail.amount %></td>
+                    <td><%= order_detail.total_price %></td>
+                </tr>
+                    <% end %>
+            </table>
+        </div>
+        <div class="col-4">
             <table>
-                    <tr class="bg-secondary">
-                        <th style="padding-right: 5em">商品名</th>
-                        <th>単価（税込）</th>
-                        <th>数量</th>
-                        <th>小計</th>
-                    </tr>
-                        <% @order.order_details.each do |order_detail| %>
-                    <tr>
-                        <td><%= order_detail.item.name %></td>
-                        <td><%= order_detail.price %></td>
-                        <td><%= order_detail.amount %></td>
-                        <td><%= order_detail.total_price %></td>
-                    </tr>
-                        <% end %>
-              </table>
-            </div>
-            <div class="col-4">
-                <table>
-                    <tr>
-                        <th>商品の合計</th>
-                        <td><%= @order.total_cash - @order.postage %>円</td>
-                    </tr>
-                    <tr>
-                        <th>送料</th>
-                        <td>
-                            <% @order.postage = 800 %>
-                            <%= @order.postage %>円
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>請求金額</th>
-                        <td>
-                            <%= @order.total_cash %>円
-                        </td>
-                    </tr>
-                </table>
-            </div>
+                <tr><th colspan="3"></th></tr>
+                <tr>
+                    <th style="padding-right: 2em">商品の合計</th>
+                    <td><%= @order.total_cash - @order.postage %>円</td>
+                </tr>
+                <tr>
+                    <th>送料</th>
+                    <td>
+                        <% @order.postage = 800 %>
+                        <%= @order.postage %>円
+                    </td>
+                </tr>
+                <tr>
+                    <th>請求金額</th>
+                    <td>
+                        <%= @order.total_cash %>円
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
+</div>
