--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,10 +3,11 @@
   <div class="row">
   <h3>新規会員登録</h3><br>
   </div>
+   <div class="row">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
   <div class="field">
-    <table>
+    <table class="table table-borderless">
      <tr>
        <th>名前</th>
        <th>(姓)&emsp;<%= f.text_field :last_name, autofocus:true, autocomplete: "last_name" %></th>
@@ -21,32 +22,32 @@
      </tr>
      <tr>
        <th>メールアドレス</th>
-       <td><%= f.email_field :email %></td>
+       <td>&emsp;&emsp;&emsp;<%= f.email_field :email %></td>
      </tr>
    　 <tr>
        <th>郵便番号(ハイフンなし)</th>
-       <td><%= f.text_field :postal_code %></td>
+       <td>&emsp;&emsp;&emsp;<%= f.text_field :postal_code %></td>
      </tr>
      <tr>
        <th>住所</th>
-       <td><%= f.text_field :address %></td>
+       <td>&emsp;&emsp;&emsp;<%= f.text_field :address, style: "width:300px;"%></td>
      </tr>
      <tr>
        <th style="padding-right: 5em">電話番号(ハイフンなし)</th>
-       <td><%= f.text_field :telephone_number %></td>
+       <td>&emsp;&emsp;&emsp;<%= f.text_field :telephone_number %></td>
      </tr>
      <tr>
        <th>パスワード(６文字以上)</th>
        <td> 
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
+        <!--<%# if @minimum_password_length %>-->
+        <!--<em>(<%#= @minimum_password_length %> characters minimum)</em>-->
+        <!--<%# end %><br />-->
+        &emsp;&emsp;&emsp;<%= f.password_field :password, autocomplete: "new-password" %>
         </td>
      </tr>
      <tr>
        <th>パスワード(確認用)</th>
-       <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+       <td>&emsp;&emsp;&emsp;<%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
      </tr>
     </table>
   </div><br>
@@ -54,8 +55,11 @@
     <%= f.submit "新規登録", class: "btn btn-sm btn-success" %>
     <% end %>
     </div><br>
-    <div class="row">
-      <h5>既に登録済みの方</h5><br>
-      <p> <%= link_to "こちら", new_session_path(resource_name) %>　からログインしてください</p>
-    </div>
+   </div>
+   <div class="row">
+        <div class="col-8">
+            <h5>既に登録済みの方</h5><br>
+            <p>&emsp;&emsp;<%= link_to "こちら", new_session_path(resource_name) %>　からログインしてください</p>
+        </div>
+   </div>
  </div>  
