--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -49,7 +49,7 @@
           <div class="container">
            <div class="row">
             <div class="col-7 text-left">
-             <%= link_to "買い物を続ける", items_path, class: 'btn btn-sm btn-primary' %>
+             <%= link_to "買い物を続ける", root_path, class: 'btn btn-sm btn-primary' %>
             </div>
              <table class="table table-bordered col-2 text-right ml-5">
                 <tr>
