--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -60,7 +60,7 @@
           <tr>
             <th style="padding-right: 5em"></th>
             <th><%= f.submit "変更を保存", class: 'btn btn-sm btn-success' %></th>
-            <th><%= link_to "退会する", withdrawal_path, method: :patch, class: 'btn btn-sm btn-primary' %></th>
+            <th><%= link_to "退会する", unsubscribe_path, class: 'btn btn-sm btn-primary' %></th>
           </tr>
         </table>
         <% end %>
