--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -9,7 +9,7 @@
    <div class="row">
     <% @items.each do |item| %>
     <div class="col-md-3">
-      <%= link_to image_tag item.get_image(100,100) %><br>
+      <%= image_tag item.get_image(100,100) %><br>
       <%= link_to item.name,admin_item_path(item.id) %><br>
       ￥<%= (item.price * 1.1).floor %><br>
     </div>
