--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"></p>
-<div class="container px-5 px-sm-0">
-    <div style="text-align: center">
+<div class="container">
+    <div class="child">
         <h2>ご注文ありがとうございました！</h2>
     </div>
