--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"></p>
-<div class="container px-5 px-sm-0">
+<div class="container">
     <h3>マイページ</h3>
     <div>
     <table class="col-2">
@@ -8,9 +8,10 @@
        <th> <%= link_to "編集する", costomers_edit_path, class: 'btn btn-sm btn-success' %></th>
      </tr>
     </table>
-    </div>
+    </div><br>
     <div class="row">
-     <div class="col-md-8 col-lg-5 px-5 px-sm-0">
+     <div class="col-1"></div>
+     <div class="col-8">
      <table class="table col-10 table-bordered">
          <th>氏名</th>
           <td>
@@ -42,6 +43,7 @@
      </table>
      </div>
     </div>
+    <div class="row">
     <table class="col-2">
      <tr>
        <th>注文履歴</th>
