--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,25 +1,32 @@
 <p id="notice"></p>
-<div class="container px-5 px-sm-0">
-<h4>注文情報入力</h4>
-<%= form_with model: @order, url: orders_confirm_path, method: :post, local: true do |f| %>  
-  <h5>支払方法</h5>
-  <%= f.radio_button :payment_way, "credit_card", checked: true %>
-  <%= f.label :payment_way_credit_card, "クレジットカード" %><br>
-  <%= f.radio_button :payment_way, "transfer" %>
-  <%= f.label :payment_way_transfer, "銀行振込" %>
-  <h5>お届け先</h5>
-   <br>
-     〒<%= current_customer.postal_code %> <%# 郵便番号 %>
-        <%= current_customer.address %><br> <%#住所%>
-        <%= current_customer.last_name %><%= current_customer.first_name %> <%#名前%>
-   <br>  
-
-<div class="container mt-4">
-  <div class="row justify-content-center">
-    <div class="col-6">
-       <%= f.submit "確認画面へ進む", class: 'btn btn-sm btn-primary ml-4' %>
+<div class="container">
+   <div class= "col-5">
+     <div class= "text-center">
+      <h4>注文情報入力</h4>
+      </div>
     </div>
-  </div>
-</div>
+    <div>
+    <%= form_with model: @order, url: orders_confirm_path, method: :post, local: true do |f| %>  
+    <h5>支払方法</h5>
+    <div>
+        &emsp;&emsp;<%= f.radio_button :payment_way, "credit_card", checked: true %>
+        <%= f.label :payment_way_credit_card, "クレジットカード" %><br>
+        &emsp;&emsp;<%= f.radio_button :payment_way, "transfer" %>
+        <%= f.label :payment_way_transfer, "銀行振込" %>
+    </div><br>
+    <h5>お届け先</h5>
+     <div>
+        &emsp;&emsp;〒<%= current_customer.postal_code %> <%# 郵便番号 %>
+            <%= current_customer.address %><br> <%#住所%>
+        &emsp;&emsp;<%= current_customer.last_name %><%= current_customer.first_name %> <%#名前%>
+     </div>
+    </div>
+    <div class="container mt-4">
+      <div class="row justify-content-center">
+        <div class="col-6">
+           <%= f.submit "確認画面へ進む", class: 'btn btn-sm btn-primary ml-4' %>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
