--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"></p>
 <div class="container">
-    <div class="child">
-        <h2>ご注文ありがとうございました！</h2>
+    <div class="row">
+        <div class="col-12 d-flex align-items-center justify-content-center" style="height:400px;">
+            <h2>ご注文ありがとうございました！</h2>
+        </div>
     </div>
+</div>
