--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -33,7 +33,7 @@
           </tr>
           <tr>
               <th>住所</th>
-              <th><%= f.text_field :address %></th>
+              <th><%= f.text_field :address, style: "width:300px;"%></th>
               <th></th>
           </tr>
           <tr>
