--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -5,7 +5,7 @@
           <table>
             <tr>
                 <th>購入者</th>
-                <td><%= @order.name %></td>
+                <td><%= link_to @order.name, admin_customer_path(@order.customer_id) %></td>
             </tr>
             <tr>
                 <th>注文日</th>
@@ -30,7 +30,7 @@
     <div class="row">
         <div class="col-8">
             <table class="table table-bordered">
-                <tr class="bg-secondary">
+                <tr class="table-secondary">
                     <th style="padding-right: 5em">商品名</th>
                     <th>単価（税込）</th>
                     <th>数量</th>
