--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -19,7 +19,7 @@
    </div>
    <div class="form-group">
     <label for="item_price">税抜価格</label>
-      <%= f.number_field :price %>
+      <%= f.number_field :price %>円
    </div>
    </div>
    <div class="section1 text-center">
