--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,6 +1,5 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
-   <h3>商品説明</h3><br>
     <div class="row">
        <div class="col">
          <%= image_tag @item.get_image(300,300) %>
@@ -8,20 +7,15 @@
         <div class="col d-flex align-items-center">
         <table>
          <tr>
-           <th>商品名</th>
            <td><%= @item.name %></td>
          </tr><br>
          <tr>
-           <th style="padding-right: 2em">商品説明</th>
            <td><%= @item.introduction %></td>
          </tr><br>
          <tr>
-           <th>税込価格<br>
-              (税抜価格)</th>
-           <td><%= (@item.price * 1.1).floor %>(<%= @item.price %>)</td>
+       <td>￥<%= (@item.price * 1.1).floor %>(<%= @item.price %>)(税込)</td>
          </tr>
          <tr>
-          <th colspan="3"></th>
          </tr>
          </table>
         </div>
