--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,28 +1,28 @@
 <p id="notice"></p>
-<div class="container px-5 px-sm-0">
+<div class="container">
    <h3>商品説明</h3><br>
     <div class="row">
-       <div class="col">
+       <div class="col-5">
          <%= image_tag @item.get_image(300,300) %>
-        </div>
-        <div class="col d-flex align-items-center">
-        <table>
-         <tr>
-           <th >商品名</th>
-           <td><%= @item.name %></td>
-         </tr><br>
-         <tr>
-           <th style="padding-right: 2em">商品説明</th>
-           <td><%= @item.introduction %></td>
-         </tr><br>
-         <tr>
-           <th>税込価格<br>
-              (税抜価格)</th>
-           <td><%= @item.with_tax_price.to_s(:delimited, delimiter: ',') %>(<%= @item.number_to_currency %>)円</td>
-         </tr>
-         <tr>
-          <th colspan="3"></th>
-         </tr>
+       </div>
+       <div class="col-5">
+         <table>
+          <tr>
+            <th>商品名</th>
+            <td><%= @item.name %></td>
+          </tr><br>
+          <tr>
+            <th style="padding-right: 2em">商品説明</th>
+            <td><%= @item.introduction %></td>
+          </tr><br>
+          <tr>
+            <th>税込価格<br>
+               (税抜価格)</th>
+            <td><%= @item.with_tax_price.to_s(:delimited, delimiter: ',') %>(<%= @item.number_to_currency %>)円</td>
+          </tr>
+          <tr>
+           <th colspan="3"></th>
+          </tr>
          </table>
         </div>
     </div>
