--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -26,7 +26,7 @@
               <%= cart_item.item.name %>
             </td>
             <td>
-              <%= (cart_item.item.price*1.1).to_i %> <%#商品単価(価格×1.08)%>
+              <%= cart_item.item.price.to_s(:delimited, delimiter: ',') %> 
             </td>
             <td>
               <%= form_with model: cart_item, url: cart_item_path(cart_item.id), local: true, method: :patch do |f| %>
@@ -35,7 +35,7 @@
               <% end %>
             </td>
             <td>
-              <%= cart_item.subtotal %>
+              <%= cart_item.subtotal.to_s(:delimited, delimiter: ',') %>
             </td>
             <td>
              <%= link_to "削除する", cart_item_path(cart_item.id, cart_item), method: :delete,class: "btn btn-danger" %>
@@ -54,7 +54,7 @@
              <table class="table table-bordered col-2 text-right ml-5">
                 <tr>
                   <td class="bg-light text-center">合計金額</td>
-                  <td class="text-center"><%= @total.round.to_s(:delimited)%></td>
+                  <td class="text-center"><%= @total.round.to_s(:delimited) %></td>
                 </tr>
               </table>
             </div>
