--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,30 +1,30 @@
 <p id="notice"></p>
-<div class="container px-5 px-sm-0">
+<div class="container">
     <div class="row">
-       <div class="col">
+        <div class="col-4">
          <%= image_tag @item.get_image(300,300) %>
         </div>
-        <div class="col d-flex align-items-center">
-        <table>
-         <tr>
-           <td><%= @item.name %></td>
-         </tr><br>
-         <tr>
-           <td><%= @item.introduction %></td>
-         </tr><br>
-         <tr>
-       <td>￥<%= (@item.price * 1.1).floor %>(<%= @item.price %>)(税込)</td>
-         </tr>
-         <tr>
-         </tr>
-         </table>
+        <div class="col-3">
+            <table>
+            <tr>
+                <td><%= @item.name %></td>
+            </tr><br>
+            <tr>
+                <td><%= @item.introduction %></td>
+            </tr><br>
+            <tr>
+                <td>￥<%= @item.with_tax_price.to_s(:delimited, delimiter: ',') %>(税込)</td>
+            </tr>
+            </table>
         </div>
-    </div>
-    <div class="d-flex justify-content-center">
-      <%= form_with model: @cart_item, url: cart_items_path do |f| %>
-      <%= f.hidden_field :item_id, value: @item.id %>
-      <%= f.select :amount, [['いち',1], ['に',2], ['さん',3]] %>
-      <%= f.submit "カートに入れる", class: 'btn btn-sm btn-success' %>
-      <% end %>
+    </div><br>
+    <div class="col-10">
+        <div class="text-center">
+          <%= form_with model: @cart_item, url: cart_items_path do |f| %>
+          <%= f.hidden_field :item_id, value: @item.id %>
+          <%= f.select :amount, [['いち',1], ['に',2], ['さん',3]] %>
+          <%= f.submit "カートに入れる", class: 'btn btn-sm btn-success' %>
+          <% end %>
+        </div>
     </div>
 </div
