--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -22,21 +22,21 @@
                   <%= cart_item.item.name %>
                 </td>
                 <td>
-                  <%= (cart_item.item.price*1.1).to_i %> <%#商品単価(価格×1.08)%>
+                  <%= cart_item.item.with_tax_price.to_s(:delimited, delimiter: ',') %>
                 </td>
                 <td>
                   <%= cart_item.amount %>
                 </td>
                 <td>
                   <%#小計の計算%>
-                  <% subtotal = ((cart_item.item.price*cart_item.amount)*1.1).to_i %>
+                  <% subtotal = (cart_item.item.with_tax_price*cart_item.amount) %>
                   <%# .to_i ← これで小数点以下を消す%>
                   <%#小計を表示%>
-                  <%= subtotal %>
+                  <%= subtotal.to_s(:delimited, delimiter: ',') %>
                 </td>
               </tr>
               <!--アイテムごとに合計金額に加算-->
-              <% total += (cart_item.item.price*cart_item.amount)*1.1 %>
+              <% total += subtotal %>
             <% end %>
           </table>
         </div>
@@ -51,13 +51,13 @@
             </tr>
             <tr>
               <th class="table-secondary text-center">商品合計</th>
-              <td class="text-fird"><%= total.to_i %></td>
+              <td class="text-fird"><%= (total.to_i).to_s(:delimited, delimiter: ',') %></td>
             </tr>
             <tr>
               <th class="table-secondary text-center">請求金額</th>
                 <td class="text-center">
                    <% @order.total_cash = @order.postage + total %>
-                   <%= @order.total_cash %>
+                   <%= @order.total_cash.to_s(:delimited, delimiter: ',') %>
                 </td>
             </tr>
           </table>
