--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -27,7 +27,7 @@
             <%= order_detail.item.name %>
             <% end %>
         </td>
-        <td><%= order.total_cash %></td>
+        <td><%= order.total_cash.to_s(:delimited)  %></td>
         <td><%= link_to "表示する", order_path(order.id),class: "btn btn-primary" %></td>
        </tr>
        <% end %>
