--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,30 +1,33 @@
 <p id="notice"></p>
- <div class="container px-5 px-sm-0">
-  <div class="row">
+  <div class="container">
    <h3>商品編集</h3>
+    <div class="row">
+     <div class="col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+       <%= form_with model: @item, url: admin_item_path do |f| %> 
+       <div class="form-group">
+         <label for="itme_image">商品画像</label>
+          <%= f.file_field :image, accept: "image/*", class: "w-100" %>
+       </div>
+       <div class="form-group">
+         <label for="item_name">商品名</label>
+          <%= f.text_field :name %>
+       </div>
+       <div class="form-group">
+         <label for="item_introduction">商品説明</label>
+          <%= f.text_area :introduction %>
+       </div>
+       <div class="form-group">
+         <label for="item_price">税抜価格</label>
+          <%= f.number_field :price %>円
+       </div>
+     </div>
+    </div>
+    <div class="row">
+     <div class="col-10">
+      <div class="section1 text-center">
+       <%= f.submit "編集を保存", class: "btn btn-success btn-default btn-sm" %>
+       <% end %>
+      </div>
+     </div>
+    </div>
   </div>
-   <div class="col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-   <%= form_with model: @item, url: admin_item_path do |f| %> 
-   <div class="form-group">
-    <label for="itme_image">商品画像</label>
-      <%= f.file_field :image, accept: "image/*", class: "w-100" %>
-   </div>
-   <div class="form-group">
-    <label for="item_name">商品名</label>
-      <%= f.text_field :name %>
-   </div>
-   <div class="form-group">
-    <label for="item_introduction">商品説明</label>
-      <%= f.text_area :introduction %>
-   </div>
-   <div class="form-group">
-    <label for="item_price">税抜価格</label>
-      <%= f.number_field :price %>円
-   </div>
-   </div>
-   <div class="section1 text-center">
-    <%= f.submit "編集を保存", class: "btn btn-success btn-default btn-sm" %>
-    <% end %>
-   </div>
-   </div>
- 
