--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -39,9 +39,9 @@
                     <% @order.order_details.each do |order_detail| %>
                 <tr>
                     <td><%= order_detail.item.name %></td>
-                    <td><%= order_detail.price %></td>
+                    <td><%= order_detail.price.to_s(:delimited, delimiter: ',') %></td>
                     <td><%= order_detail.amount %></td>
-                    <td><%= order_detail.total_price %></td>
+                    <td><%= order_detail.total_price.to_s(:delimited, delimiter: ',') %></td>
                 </tr>
                     <% end %>
             </table>
@@ -51,7 +51,7 @@
                 <tr><th colspan="3"></th></tr>
                 <tr>
                     <th style="padding-right: 2em">商品の合計</th>
-                    <td><%= @order.total_cash - @order.postage %>円</td>
+                    <td><%= (@order.total_cash - @order.postage).to_s(:delimited, delimiter: ',') %>円</td>
                 </tr>
                 <tr>
                     <th>送料</th>
@@ -63,7 +63,7 @@
                 <tr>
                     <th>請求金額</th>
                     <td>
-                        <%= @order.total_cash %>円
+                        <%= @order.total_cash.to_s(:delimited, delimiter: ',') %>円
                     </td>
                 </tr>
             </table>
