--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
    <h3>商品編集</h3>
     <div class="row">
-     <div class="col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+     <div class="col-10 mx-auto">
        <%= form_with model: @item, url: admin_item_path do |f| %> 
        <div class="form-group">
          <label for="itme_image">商品画像</label>
@@ -20,14 +20,17 @@
          <label for="item_price">税抜価格</label>
           <%= f.number_field :price %>円
        </div>
-     </div>
-    </div>
+    
+    
     <div class="row">
-     <div class="col-10">
+     <div class="col-8">
       <div class="section1 text-center">
        <%= f.submit "編集を保存", class: "btn btn-success btn-default btn-sm" %>
-       <% end %>
       </div>
      </div>
+    </div>
+       <% end %>
+       </div>
+       
     </div>
   </div>
