--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
               </li>
               <li class="nav-item">
                 <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-light' do %>
-                  サインアウト
+                  ログアウト
                 <% end %>
               </li>
               <% else %>
